bug fix flyout collapse

--- a/sass/components/_collapse.scss
+++ b/sass/components/_collapse.scss
@@ -1,5 +1,8 @@
 .collapse {
   display: none;
+  @include breakpoint(map-get($breakpoints, med)) {
+    display: block;
+  }
   &.in {
     display: block;
     &.btn {
